--- a/pom.xml
+++ b/pom.xml
@@ -23,6 +23,7 @@
 	</developers>
     <modules>
 		<module>user-service</module>
+		<module>product-service</module>
 	</modules>
     <scm>
 		<connection/>
