--- a/user-service/src/main/resources/application.properties
+++ b/user-service/src/main/resources/application.properties
@@ -9,3 +9,6 @@ spring.jpa.generate-ddl=true
 
 spring.security.user.name=admin
 spring.security.user.password=admin
+
+spring.mvc.view.prefix=/
+spring.mvc.view.suffix=.html
