--- a/pom.xml
+++ b/pom.xml
@@ -24,7 +24,8 @@
 	<modules>
 		<module>user-service</module>
 		<module>product-service</module>
-	</modules>
+        <module>api-gateway</module>
+    </modules>
 	<scm>
 		<connection/>
 		<developerConnection/>
